# py-flow

./: .gitignore  AGENT_BUILDER.md  AI.md  API.md  IRS_DEMO.md  LAKEHOUSE.md  LINUX_ARM_SETUP.md  MEDIA.md  PLATFORM_AGENTS.md  README.md  ROADMAP.md  TIMESERIES.md  demo_agent.py  demo_agent_builder.py  demo_agent_platform.py  demo_backtest.py  demo_bridge.py  demo_datacube.py  demo_datacube_ui.py  demo_ir_swap.py  demo_irs.py  demo_lakehouse.py  demo_lakehouse_ingest.py  demo_media.py  demo_platform_agents.py  demo_rag.py  demo_three_tiers.py  demo_trading.py  pgserver.py  pyproject.toml  run_demo_tests.sh  run_tests.sh
.github/workflows/: ci.yml  publish.yml
agents/: _codegen.py  _context.py  _dashboard.py  _document.py  _oltp.py  _query.py  _timeseries.py
agents/_eval/: scorers.py
ai/: __init__.py  _tools.py  agent.py  eval.py  eval_datasets.py  llm.py  memory.py  team.py  tools.py
bridge/: __init__.py  store_bridge.py
bridge/sinks/: __init__.py  lakehouse.py
datacube/: __init__.py  compiler.py  config.py  engine.py  server.py
datacube/static/: index.html
demos/: demo_datacube.py
docs/architecture/: fx_curves.md  instruments_swaps.md  marketmodel_curves.md  reactive_expr_dag.md  servers_and_platform.md
instruments/: __init__.py  ir_scheduling.py  ir_swap_fixed_float.py  ir_swap_fixed_floatapprox.py  ir_swap_float_float.py  portfolio.py
lakehouse/: _registry.py  admin.py  catalog.py  query.py  rls_server.py  services.py  sync.py
marketdata/: _registry.py  admin.py  bus.py  client.py  models.py  server.py
marketdata/feeds/: simulator.py
marketmodel/: __init__.py  curve_fitter.py  swap_curve.py  symbols.py  yield_curve.py
media/: __init__.py  _minio.py  _registry.py  admin.py  extraction.py  models.py  s3.py  store.py
objectstore/: __init__.py  _minio.py  client.py
reactive/: __init__.py  agg.py  bridge.py  computed.py  computed_expr.py  expr.py
scheduler/: dag_runner.py  models.py  resolve.py  server.py
scripts/: run_nightly_tests.sh
store/: __init__.py  _active_record.py  _types.py  admin.py  base.py  client.py  connection.py  pg_compat.py  query_result.py  registry.py  server.py  state_machine.py  subscriptions.py
store/columns/: __init__.py  finance.py  general.py  media.py
streaming/: __init__.py  _conversions.py  _registry.py  _utils.py  admin.py  agg.py  decorator.py  table.py
tests/: __init__.py  conftest.py  test_agents.py  test_ai_client.py  test_auto_persist.py  test_bridge.py  test_client_ops.py  test_connection.py  test_data_engineers.py  test_datacube.py  test_datacube_integration.py  test_demo_bridge.py  test_demo_ir_swap.py  test_demo_ir_xccy_swap.py  test_demo_lakehouse_ingest.py  test_dh_table.py  test_embed_upload.py  test_expr_sql_duckdb.py  test_fixed_float_swap.py  test_fixed_floatapprox_swap.py  test_float_float_swap.py  test_lakehouse.py  test_lakehouse_integration.py  test_lakehouse_rls_integration.py  test_llm.py  test_media.py  test_media_integration.py  test_memory.py  test_multi_client.py  test_packaging.py  test_questdb_integration.py  test_rag.py  test_reactive.py  test_reactive_irs.py  test_scheduler.py  test_server_tables.py  test_store.py  test_timeseries.py  test_timeseries_integration.py  test_tools.py  (+2 more)
timeseries/: __init__.py  _registry.py  admin.py  base.py  client.py  consumer.py  factory.py  models.py
timeseries/backends/memory/: __init__.py
timeseries/backends/questdb/: __init__.py  manager.py  reader.py  schema.py  writer.py
workflow/: __init__.py  _registry.py  admin.py  dispatcher.py  engine.py  factory.py
